manifests/01-calico-policies/tier-security/01-allow-dns.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-dns
  annotations:
    tigera.io/tier: security
spec:
  selector: all()
  egress:
    - action: Allow
      protocol: UDP
      destination:
        ports: [53]
  types:
    - Egress
