manifests/01-calico-policies/tier-security/01-default-deny-egress-app.yaml
# Deny all outbound traffic from pods in the online-boutique namespace (except what is explicitly allowed below).
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny-egress-app
  annotations:
    tigera.io/tier: security
spec:
  selector: projectcalico.org/name == 'online-boutique'
  types:
    - Egress
  egress:
    - action: Deny
