manifests/01-calico-policies/tier-security/02-allow-dns-online-boutique.yaml
# Allow pods in the online-boutique namespace to send DNS queries (UDP 53) so they can resolve external names.
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-dns-online-boutique
  annotations:
    tigera.io/tier: security
spec:
  selector: projectcalico.org/name == 'online-boutique'
  egress:
    - action: Allow
      protocol: UDP
      destination:
        ports: [53]
  types:
    - Egress
